fix(styles): disable horizontal scroll

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,11 @@ p {
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   background: $color-green-light;
   color: $color-gray;
@@ -23,7 +28,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   min-height: 100vh;
-  overflow-x: hidden;
   width: 100vw;
 }
 
